--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "framer-motion": "^12.6.3",
     "next": "15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
